--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,11 @@
   }
 
   addToCartBtn.addEventListener("click", addToCart);
-  heroBuyBtn.addEventListener("click", addToCart);
+  heroBuyBtn.addEventListener("click", function () {
+    addToCart();
+    window.location.href = "checkout.html";
+});
+
 
   checkoutBtn.addEventListener("click", function () {
     window.location.href = "checkout.html";
@@ -1087,4 +1091,5 @@
 </script>
 </body>
 </html>
+
 
