--- a/index.html
+++ b/index.html
@@ -703,10 +703,11 @@
         <a href="#faq">FAQ</a>
         <a href="#contact">Contact</a>
       </nav>
-      <div class="nav-cart" onclick="window.location.href='cart.html'">
-        Cart
-        <span class="nav-cart-count" id="navCartCount">0</span>
-      </div>
+      <button class="nav-cart" id="navCartBtn" type="button">
+  Cart
+  <span class="nav-cart-count" id="navCartCount">0</span>
+</button>
+
     </div>
   </header>
 
@@ -1102,6 +1103,7 @@
 </script>
 </body>
 </html>
+
 
 
 
