--- a/index.html
+++ b/index.html
@@ -116,12 +116,16 @@
     }
 
     .nav-cart {
-      display: flex;
-      align-items: center;
-      gap: 0.4rem;
-      font-size: 0.85rem;
-      color: var(--muted);
-    }
+  background: transparent;
+  border: none;
+  color: inherit;
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+  font-size: 0.85rem;
+  cursor: pointer;   /* important! */
+}
+
 
     .nav-cart-count {
       min-width: 22px;
@@ -1103,6 +1107,7 @@
 </script>
 </body>
 </html>
+
 
 
 
