--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
 
   const navCartBtn = document.getElementById("navCartBtn");
   navCartBtn.addEventListener("click", function () {
-  window.location.href = "cart.html";
+  window.location.href = "./cart.html";
 });
 
   // Set initial price / year
@@ -1098,12 +1098,12 @@
   addToCartBtn.addEventListener("click", addToCart);
   heroBuyBtn.addEventListener("click", function () {
     addToCart();
-    window.location.href = "checkout.html";
+    window.location.href = "./checkout.html";
 });
 
 
   checkoutBtn.addEventListener("click", function () {
-    window.location.href = "checkout.html";
+    window.location.href = "./checkout.html";
 });
 
 
@@ -1112,6 +1112,7 @@
 </script>
 </body>
 </html>
+
 
 
 
